--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,8 @@
     <string name="test_core_list_ui">Test List UI</string>
     <string name="test_core_table_ui">Test Table UI</string>
 	<string name="custom_picker_positive_button">Set1</string>
+    <string name="delete">Delete</string>
+	<string name="confirm_delete">Confirm deletion of %1$s as employee!</string>
+	<string name="error_deleting_employee">Error deleting employee! Could be a founder</string>
+    <string name="fire">Fire</string>
 </resources>
