--- a/dialog/src/main/res/values/strings.xml
+++ b/dialog/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="xui_dialog_and">and</string>
-    <string name="xui_dialog_picker_dialog_positive_button_text">Set</string>
+    <string name="xui_set">Set</string>
 </resources>
